test: add java security policy for jackson reflection